fix recipes that weren't working on mobile

--- a/default.css
+++ b/default.css
@@ -8,7 +8,7 @@ body {
 main {
   max-width: 600px;
   margin: 0 auto;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 footer {
   text-align: center;
